Feat: CRUD Categories
